--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@prisma/client": "^5.9.1",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
@@ -26,6 +27,7 @@
     "@types/pg": "^8.11.0",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.3.6"
   }
 }
